--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "author": "",
     "license": "ISC",
     "scripts": {
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "start": "node src/index.js"
     },
     "dependencies": {
         "axios": "^0.19.2",
